ranger trash put using delete key on mac

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -160,8 +160,9 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-map <DELETE>   console delete
 map <INSERT>   console touch%space
+map <DELETE>   console delete
+map <bs> shell -s trash-put %s
 
 
 # VIM-like
