--- a/kitty.conf
+++ b/kitty.conf
@@ -522,7 +522,7 @@ clipboard_control write-clipboard write-primary
 #: functionality is a security risk as it means that any program, even
 #: one running on a remote server via SSH can read your clipboard.
 
-# term xterm-255color
+term xterm-255color
 # term kitty
 
 #: The value of the TERM environment variable to set. Changing this
