--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ ranger/fish/
 ranger/nvim/
 ranger/omf/
 ranger/plugins/__pycache__/
+ranger/plugins/devicons*
+ranger/plugins/ranger_devicons
 
 feh/feh
 mpd/database
