--- a/i3/config
+++ b/i3/config
@@ -29,6 +29,9 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec $TERMINAL
 
+# start a browser
+# bindsym $mod+B exec $BROWSER
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
