--- a/i3/config
+++ b/i3/config
@@ -30,7 +30,7 @@ floating_modifier $mod
 bindsym $mod+Return exec $TERMINAL
 
 # start a browser
-# bindsym $mod+B exec $BROWSER
+bindsym $mod+i exec $BROWSER
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -276,7 +276,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
-exec --no-startup-id manjaro-hello
+#exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
