--- a/default.conf.yaml
+++ b/default.conf.yaml
@@ -26,6 +26,7 @@
         force: true
     ~/.config/mpd: mpd
     ~/.config/mpv: mpv
+    ~/.config/ncmpcpp:
     ~/.config/newsboat: newsboat
     ~/.config/karabiner: 
     ~/.config/ranger: ranger 
