--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -13,6 +13,8 @@ set open_all_images true
 set preview_images true
 # set preview_images_method iterm
 set preview_images_method kitty
+# set preview_images_method urxvt
+# set preview_images_method ueberzug
 
 set vcs_aware false
 set vcs_backend_git enabled
