--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -43,6 +43,7 @@
     ~/.i3: 
         force: true
     ~/.moc/config: moc/config
+    ~/.moc/keymap: moc/keymap
     ~/.matplotlib/matplotlibrc: 
     ~/.pylintrc: 
     ~/.profile: 
