--- a/moc/config
+++ b/moc/config
@@ -69,12 +69,12 @@
 #
 # Example:    MusicDir = "/home/joe/music"
 #
-MusicDir =/home/j
+MusicDir =/home/j/Music
 
 # Start in the music directory by default?  If set to 'no', start
 # in the current directory by default.  A single directory on
 # the command line takes precedence.
-#StartInMusicDir = no
+StartInMusicDir = yes
 
 # How to sort?  FileName is the option's only value for now.
 #Sort = FileName
