--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,18 @@
 # https://github.com/ashishb/dotfiles/blob/master/.travis.yml
+# https://stackoverflow.com/questions/27644586/how-to-set-up-travis-ci-with-multiple-languages
 
 branches:
   except:
     - dev
 
-# https://stackoverflow.com/questions/27644586/how-to-set-up-travis-ci-with-multiple-languages
-# Test on Both GNU/Linux and Mac OS
 matrix:
   include:
-    - name: Test on ubuntu
-      os: linux
-      dist: trusty
-      sudo: false
-      script:
-        - bash install.sh
-    - name: Test on ubuntu 18.04
+    - name: Ubuntu18.04
       os: linux
       dist: bionic
       sudo: false
       script:
-        - bash install ubuntu.mk
+        - bash install.sh
     - name: Test on Mac OS X
       os: osx
       osx_image: xcode11.3
