--- a/i3/config
+++ b/i3/config
@@ -49,6 +49,10 @@ bindsym $mod+d exec dmenu_run
 bindsym $mod+z exec --no-startup-id morc_menu
 
 
+# Lock screen (Ctrl+Alt+L)
+bindsym Mod1+Ctrl+l exec cinnamon-screensaver-command --lock
+
+
 ################################################################################################
 ## Music
 ################################################################################################
@@ -258,7 +262,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 bindsym $mod+0 mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3exit lock, mode "default"
+    bindsym l exec --no-startup-id i3lock, mode "default"
     bindsym s exec --no-startup-id i3exit suspend, mode "default"
     bindsym u exec --no-startup-id i3exit switch_user, mode "default"
     bindsym e exec --no-startup-id i3exit logout, mode "default"
