--- a/polybar/config
+++ b/polybar/config
@@ -59,8 +59,8 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ;font-2 = siji:pixelsize=10;1
 font-2 = FontAwesome:size=10;2
 
-:modules-left = bspwm i3
-:modules-center = mpd
+modules-left = bspwm i3
+modules-center = mpd
 modules-right = pulseaudio cpu battery date time
 
 tray-position = right
