--- a/i3/config
+++ b/i3/config
@@ -84,7 +84,7 @@ bindsym $mod+Shift+Right move right
 bindsym $mod+o split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+# bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
