--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,6 +26,7 @@
     ~/.config/fish: 
         force: true
     ~/.config/flake8: 
+    ~/.config/i3: 
     ~/.config/i3blocks/config: i3blocks/config
     ~/.config/karabiner: 
     ~/.config/kitty/kitty.conf: 
@@ -49,8 +50,6 @@
     ~/.config/gnome-session/sessions/gnome_plus_i3.config: gnome_plus_i3.session
     ~/.dircolors:
     ~/.gitignore: 
-    ~/.i3: 
-        force: true
     ~/.moc/config: moc/config
     ~/.moc/keymap: moc/keymap
     ~/.matplotlib/matplotlibrc: 
