--- a/kitty.conf
+++ b/kitty.conf
@@ -147,7 +147,7 @@ open_url_with default
 #: special value default means to use the operating system's default
 #: URL handler.
 
-copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard on select. With this enabled, simply selecting
 #: text with the mouse will cause the text to be copied to clipboard.
@@ -648,7 +648,8 @@ macos_custom_beam_cursor no
 
 #:     map ctrl+f>2 set_font_size 20
 
-kitty_mod ctrl+shift
+# kitty_mod ctrl+shift
+kitty_mod Alt
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
