--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,7 +44,7 @@
     ~/.config/lf:
     ~/.config/clipit/clipitrc:
     ~/.config/dunst/dunstrc:
-    ~/.config/sxhkd: 
+    ~/.config/sxhkd/sxhkdrc: sxhkd/sxhkdrc
     ~/.config/synapse:
     ~/.config/zathura/zathurarc: 
     ~/.config/gnome-session/sessions/gnome_plus_i3.config: gnome_plus_i3.session
