--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -46,11 +46,10 @@
     ~/.config/sxhkd/sxhkdrc: sxhkd/sxhkdrc
     ~/.config/synapse:
     ~/.config/zathura/zathurarc: 
-    ~/.config/gnome-session/sessions/gnome_plus_i3.config: gnome_plus_i3.session
     ~/.dircolors:
     ~/.gitignore: 
-    ~/.gitignore: 
     ~/.gitcli.yml: 
+    ~/.local/share/applications: local/share/applications
     ~/.moc/config: moc/config
     ~/.moc/keymap: moc/keymap
     ~/.matplotlib/matplotlibrc: 
@@ -63,6 +62,5 @@
       force: true
     ~/.xonshrc:
     ~/.xprofile:
-    ~/.xsessionrc:
     ~/.yabairc:
     ~/.zshrc:
