--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,8 +22,10 @@
     ~/.config/dunst/dunstrc: 
       force: true
     ~/.config/feh: feh
-    ~/.config/fish: 
-        force: true
+    ~/.config/fish/functions.fish: fish/functions.fish
+    ~/.config/fish/config.fish: fish/config.fish
+    ~/.config/fish/abbr.fish: fish/abbr.fish
+    ~/.config/fish/completions: fish/completions
     ~/.config/flake8: 
     ~/.config/i3: 
     # ~/.config/i3blocks/config: i3blocks/config
