--- a/kitty.conf
+++ b/kitty.conf
@@ -648,8 +648,9 @@ macos_custom_beam_cursor no
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
-kitty_mod Alt
+kitty_mod ctrl+shift
+# kitty_mod Alt
+# kitty_mod ctrl
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
