fixed lint indent and prettierrc

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -54,6 +54,7 @@
     ~/.moc/keymap: moc/keymap
     ~/.matplotlib/matplotlibrc: 
     ~/.pylintrc: 
+    ~/.prettierrc: 
     ~/.tmux.conf.local:
     ~/.vifm: 
     ~/.weechat:
