--- a/tmux.conf
+++ b/tmux.conf
@@ -48,6 +48,7 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
 bind _ split-window -v -c "#{pane_current_path}"
 bind - split-window -h -c "#{pane_current_path}"
+bind Tab last-window        # move to last active window
+bind BTab switch-client -l  # move to last session
