tmux visual mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind Enter copy-mode # enter copy mode
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
