--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g mouse on
 
 unbind C-b
 set -g prefix C-a
-bind C-Space send-prefix
+# bind C-Space send-prefix
 
 # Vim style pane selection
 bind h select-pane -L
