--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
-set -g mouse on
 
 unbind C-b
 set -g prefix C-a
@@ -57,10 +56,11 @@ run '~/.tmux/plugins/tpm/tpm'
 set-window-option -g mode-keys vi
 
 # keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind _ split-window -v -c "#{pane_current_path}"
 bind - split-window -h -c "#{pane_current_path}"
 bind Tab last-window        # move to last active window
 bind BTab switch-client -l  # move to last session
+
+set -g mouse on
+set -s set-clipboard off
+
