--- a/tmux.conf
+++ b/tmux.conf
@@ -66,5 +66,5 @@ bind Tab last-window        # move to last active window
 bind BTab switch-client -l  # move to last session
 
 set -g mouse on
-set -s set-clipboard off
+# set -s set-clipboard off
 
