--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,8 +22,8 @@
       force: true
     ~/.config/feh: feh
     ~/.config/fish/config.fish: fish/config.fish
+    ~/.config/rofi:
     ~/.config/fish/functions.fish: fish/functions.fish
-    ~/.config/fish/config.fish: fish/config.fish
     ~/.config/fish/abbr.fish: fish/abbr.fish
     ~/.config/fish/completions: fish/completions
     ~/.config/sway/config: sway
