--- a/kanshi/config
+++ b/kanshi/config
@@ -7,6 +7,10 @@ profile work-dual-stacked {
 	output "Lenovo Group Limited P27h-20 V90A9YP5" mode 2560x1440 position 0,0 scale 1
 	output eDP-1 mode 3840x2400 position 320,1440 scale 2
 }
+profile home-dual-stacked {
+	output "Ancor Communications Inc PB328 H3LMQS113349" mode 2560x1440 position 0,0 scale 1
+	output eDP-1 mode 1920x1080 position 320,1440 scale 1
+}
 
 profile laptop-only {
 	output eDP-1 mode 3840x2400 position 0,0 scale 2
