bring i3 to sway

--- a/i3/config
+++ b/i3/config
@@ -15,9 +15,7 @@ for_window [class="^.*"] border pixel 0
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-bindsym $mod+Return exec i3-sensible-terminal
-# bindsym $mod+Return exec $TERMINAL
-
+bindsym $mod+Return exec i3-sensible-terminal -e fish
 bindsym $mod+q kill
 bindsym $mod+Shift+x exec i3lock
 bindsym $mod+d exec rofi -show run
@@ -25,11 +23,45 @@ bindsym $mod+x exec rofi -show window
 bindsym $mod+i exec firefox
 bindsym $mod+Shift+i exec google-chrome
 
+# bindsym $mod+$left focus left
+# bindsym $mod+$down focus down
+# bindsym $mod+$up focus up
+# bindsym $mod+$right focus right
+# bindsym $mod+Left focus left
+# bindsym $mod+Down focus down
+# bindsym $mod+Up focus up
+# bindsym $mod+Right focus right
+# bindsym $mod+Shift+$left move left
+# bindsym $mod+Shift+$down move down
+# bindsym $mod+Shift+$up move up
+# bindsym $mod+Shift+$right move right
+# bindsym $mod+Shift+Left move left
+# bindsym $mod+Shift+Down move down
+# bindsym $mod+Shift+Up move up
+# bindsym $mod+Shift+Right move right
+# mode "resize" {
+#     bindsym $left resize shrink width 10 px or 10 ppt
+#     bindsym $down resize grow height 10 px or 10 ppt
+#     bindsym $up resize shrink height 10 px or 10 ppt
+#     bindsym $right resize grow width 10 px or 10 ppt
+#     bindsym Left resize shrink width 10 px or 10 ppt
+#     bindsym Down resize grow height 10 px or 10 ppt
+#     bindsym Up resize shrink height 10 px or 10 ppt
+#     bindsym Right resize grow width 10 px or 10 ppt
+#     bindsym Return mode "default"
+#     bindsym Escape mode "default"
+# }
+# bindsym $mod+r mode "resize"
+# bindsym $mod+Period resize grow width 10 px or 10 ppt
+# bindsym $mod+Comma resize shrink width 10 px or 10 ppt
+
 # change focus
+set $left h
+set $down j
+set $up k
+set $right l
 bindsym $mod+j focus next
 bindsym $mod+k focus prev
-bindsym $mod+h resize shrink width 10 px or 10 ppt
-bindsym $mod+l resize grow width 10 px or 10 ppt
 
 # bindsym $mod+j focus down
 # bindsym $mod+k focus up
@@ -118,31 +150,6 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'exit i3?' -b 'yes' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym k resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Right resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Left resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
