--- a/i3/config
+++ b/i3/config
@@ -1,8 +1,12 @@
+# vim: foldmethod=marker foldlevel=1
 # i3 config file (v4)
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-# set $mod Mod1
+set $left h
+set $down j
+set $up k
+set $right l
 
 gaps inner 15
 gaps outer 0
@@ -23,45 +27,58 @@ bindsym $mod+x exec rofi -show window
 bindsym $mod+i exec firefox
 bindsym $mod+Shift+i exec google-chrome
 
-# bindsym $mod+$left focus left
-# bindsym $mod+$down focus down
-# bindsym $mod+$up focus up
-# bindsym $mod+$right focus right
-# bindsym $mod+Left focus left
-# bindsym $mod+Down focus down
-# bindsym $mod+Up focus up
-# bindsym $mod+Right focus right
-# bindsym $mod+Shift+$left move left
-# bindsym $mod+Shift+$down move down
-# bindsym $mod+Shift+$up move up
-# bindsym $mod+Shift+$right move right
-# bindsym $mod+Shift+Left move left
-# bindsym $mod+Shift+Down move down
-# bindsym $mod+Shift+Up move up
-# bindsym $mod+Shift+Right move right
-# mode "resize" {
-#     bindsym $left resize shrink width 10 px or 10 ppt
-#     bindsym $down resize grow height 10 px or 10 ppt
-#     bindsym $up resize shrink height 10 px or 10 ppt
-#     bindsym $right resize grow width 10 px or 10 ppt
-#     bindsym Left resize shrink width 10 px or 10 ppt
-#     bindsym Down resize grow height 10 px or 10 ppt
-#     bindsym Up resize shrink height 10 px or 10 ppt
-#     bindsym Right resize grow width 10 px or 10 ppt
-#     bindsym Return mode "default"
-#     bindsym Escape mode "default"
-# }
-# bindsym $mod+r mode "resize"
-# bindsym $mod+Period resize grow width 10 px or 10 ppt
-# bindsym $mod+Comma resize shrink width 10 px or 10 ppt
-
-# change focus
-set $left h
-set $down j
-set $up k
-set $right l
-bindsym $mod+j focus next
-bindsym $mod+k focus prev
+# Windows {{{
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+# }}}
+# Workspaces {{{
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
+# }}}
+# Layout {{{
+bindsym $mod+b splith
+bindsym $mod+v splitv
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+bindsym $mod+f fullscreen
+bindsym $mod+Shift+space floating toggle
+bindsym $mod+space focus mode_toggle
+bindsym $mod+a focus parent
+default_border pixel 1
+# }}}
 
 # bindsym $mod+j focus down
 # bindsym $mod+k focus up
@@ -73,59 +90,58 @@ bindsym $mod+k focus prev
 # bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move left
-bindsym $mod+Shift+h move right
+# bindsym $mod+Shift+j move down
+# bindsym $mod+Shift+k move up
+# bindsym $mod+Shift+l move left
+# bindsym $mod+Shift+h move right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+# # alternatively, you can use the cursor keys:
+# bindsym $mod+Shift+Left move left
+# bindsym $mod+Shift+Down move down
+# bindsym $mod+Shift+Up move up
+# bindsym $mod+Shift+Right move right
 
-# split in horizontal/vertical orientation
-# bindsym $mod+v split h
-# bindsym $mod+Shift+v split v
+# # split in horizontal/vertical orientation
+# # bindsym $mod+v split h
+# # bindsym $mod+Shift+v split v
 
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+# # enter fullscreen mode for the focused container
+# bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# # change container layout (stacked, tabbed, toggle split)
+# bindsym $mod+s layout stacking
+# bindsym $mod+w layout tabbed
+# bindsym $mod+e layout toggle split
 
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+# # toggle tiling / floating
+# bindsym $mod+Shift+space floating toggle
+# bindsym $mod+Tab workspace back_and_forth
+# bindsym $mod+b workspace back_and_forth
+# bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 
-bindsym $mod+Tab workspace back_and_forth
-bindsym $mod+b workspace back_and_forth
-bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
+# # switch to workspace
+# bindsym $mod+1 workspace number 1: term
+# bindsym $mod+2 workspace number 2: chrome
+# bindsym $mod+3 workspace number 3: firefox
+# bindsym $mod+4 workspace number 4
+# bindsym $mod+5 workspace number 5
+# bindsym $mod+6 workspace number 6
+# bindsym $mod+7 workspace number 7
+# bindsym $mod+8 workspace number 8
+# bindsym $mod+9 workspace number 9
+# bindsym $mod+0 workspace number 10
 
-# switch to workspace
-bindsym $mod+1 workspace number 1: term
-bindsym $mod+2 workspace number 2: chrome
-bindsym $mod+3 workspace number 3: firefox
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 1
+# # move focused container to workspace
+# bindsym $mod+Shift+1 move container to workspace number 1
+# bindsym $mod+Shift+2 move container to workspace number 2
+# bindsym $mod+Shift+3 move container to workspace number 3
+# bindsym $mod+Shift+4 move container to workspace number 4
+# bindsym $mod+Shift+5 move container to workspace number 5
+# bindsym $mod+Shift+6 move container to workspace number 6
+# bindsym $mod+Shift+7 move container to workspace number 7
+# bindsym $mod+Shift+8 move container to workspace number 8
+# bindsym $mod+Shift+9 move container to workspace number 9
+# bindsym $mod+Shift+0 move container to workspace number 1
 
 #brightness
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
