--- a/i3/config
+++ b/i3/config
@@ -1,7 +1,6 @@
 # vim: foldmethod=marker foldlevel=1
-# i3 config file (v4)
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-
+# see http://i3wm.org/docs/userguide.html for a complete reference!
+# Variables {{{
 set $mod Mod4
 set $left h
 set $down j
@@ -12,13 +11,9 @@ gaps inner 15
 gaps outer 0
 
 workspace_layout default
-
-new_window 1pixel
-for_window [class="^.*"] border pixel 0
-
-# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
-
+# }}}
+# keybindings {{{
 bindsym $mod+Return exec i3-sensible-terminal -e fish
 bindsym $mod+q kill
 bindsym $mod+Shift+x exec i3lock
@@ -26,7 +21,9 @@ bindsym $mod+d exec rofi -show run
 bindsym $mod+x exec rofi -show window
 bindsym $mod+i exec firefox
 bindsym $mod+Shift+i exec google-chrome
-
+bindsym $mod+Shift+c restart
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'exit i3?' -b 'yes' 'i3-msg exit'"
+# }}}
 # Windows {{{
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
@@ -79,73 +76,9 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 default_border pixel 1
 # }}}
-
-# bindsym $mod+j focus down
-# bindsym $mod+k focus up
-
-# alternatively, you can use the cursor keys:
-# bindsym $mod+Left focus left
-# bindsym $mod+Shift+h workspace prev
-# bindsym $mod+Shift+l workspace next
-# bindsym $mod+Right focus right
-
-# move focused window
-# bindsym $mod+Shift+j move down
-# bindsym $mod+Shift+k move up
-# bindsym $mod+Shift+l move left
-# bindsym $mod+Shift+h move right
-
-# # alternatively, you can use the cursor keys:
-# bindsym $mod+Shift+Left move left
-# bindsym $mod+Shift+Down move down
-# bindsym $mod+Shift+Up move up
-# bindsym $mod+Shift+Right move right
-
-# # split in horizontal/vertical orientation
-# # bindsym $mod+v split h
-# # bindsym $mod+Shift+v split v
-
-# # enter fullscreen mode for the focused container
-# bindsym $mod+f fullscreen toggle
-
-# # change container layout (stacked, tabbed, toggle split)
-# bindsym $mod+s layout stacking
-# bindsym $mod+w layout tabbed
-# bindsym $mod+e layout toggle split
-
-# # toggle tiling / floating
-# bindsym $mod+Shift+space floating toggle
-# bindsym $mod+Tab workspace back_and_forth
-# bindsym $mod+b workspace back_and_forth
-# bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
-
-# # switch to workspace
-# bindsym $mod+1 workspace number 1: term
-# bindsym $mod+2 workspace number 2: chrome
-# bindsym $mod+3 workspace number 3: firefox
-# bindsym $mod+4 workspace number 4
-# bindsym $mod+5 workspace number 5
-# bindsym $mod+6 workspace number 6
-# bindsym $mod+7 workspace number 7
-# bindsym $mod+8 workspace number 8
-# bindsym $mod+9 workspace number 9
-# bindsym $mod+0 workspace number 10
-
-# # move focused container to workspace
-# bindsym $mod+Shift+1 move container to workspace number 1
-# bindsym $mod+Shift+2 move container to workspace number 2
-# bindsym $mod+Shift+3 move container to workspace number 3
-# bindsym $mod+Shift+4 move container to workspace number 4
-# bindsym $mod+Shift+5 move container to workspace number 5
-# bindsym $mod+Shift+6 move container to workspace number 6
-# bindsym $mod+Shift+7 move container to workspace number 7
-# bindsym $mod+Shift+8 move container to workspace number 8
-# bindsym $mod+Shift+9 move container to workspace number 9
-# bindsym $mod+Shift+0 move container to workspace number 1
-
-#brightness
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
+# Special keys {{{
+bindsym XF86MonBrightnessUp exec light -A 5
+bindsym XF86MonBrightnessDown exec light -U 5
 bindsym XF86Reload exec playerctl play-pause
 bindsym XF86Back exec playerctl previous
 bindsym XF86Forward exec playerctl next
@@ -156,45 +89,24 @@ bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bindsym XF86Tools exec gnome-control-center
 bindsym XF86Display exec dock-it
-#&& notify-send "Mute"
-
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'exit i3?' -b 'yes' 'i3-msg exit'"
-
-
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-  #status_command i3status
-  #colors {
-    #statusline #AAAAAA
-    #background #111111
-    #focused_workspace #282828 #282828 #FFFFFF
-    #inactive_workspace #333333 #333333 #AAAAAA
-  #}
-#}
-
+# }}}
+# exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+bar {
+  status_command i3status
+  colors {
+    statusline #AAAAAA
+    background #111111
+    focused_workspace #282828 #282828 #FFFFFF
+    inactive_workspace #333333 #333333 #AAAAAA
+  }
+}
 #exec compton
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
-#exec nm-applet
-exec feh --bg-scale ~/Pictures/background.jpg
+# exec nm-applet
+# exec feh --bg-scale $HOME/dotfiles/luke/.local/share/thiemeyer_road_to_samarkand.jpg
 # exec --no-startup-id i3-msg 'workspace 1; exec google-chrome-stable'
 # exec --no-startup-id i3-msg 'workspace 1: support;'
 # exec --no-startup-id i3-msg 'workspace 2: comms'
 # exec --no-startup-id i3-msg 'workspace 2: comms; exec dynamite; exec gmail'
 # exec $HOME/.i3/autostart.sh
 
-client.unfocused #333333 #333333 #FFFFFF #333333
-client.focused_inactive #333333 #333333 #FFFFFF #000000
-client.focused #000000 #000000 #222222 #444444
-
-hide_edge_borders vertical
-
-# bindsym $mod+Shift+v exec ~/.vim-anywhere/bin/run
